--- a/svelte_gql_axum_postgresql/frontend/src/app.css
+++ b/svelte_gql_axum_postgresql/frontend/src/app.css
@@ -4,7 +4,12 @@
 
     --text-primary: rgba(77, 77, 77, 1.000);
     --text-secondary: rgba(119, 119, 119, 1.000);
-    --text-terciary: rgba(230, 230, 230, 1.000);
+    --text-tertiary: rgba(230, 230, 230, 1.000);
+    --text-disabled: rgba(217, 217, 217, 1.000);
+
+    --border-primary: rgba(230, 230, 230, 1.000);
+    --border-secondary: rgba(175, 47, 47, 0.1);;
+    --border-tertiary: rgba(240, 215, 214, 1.000);
 }
 
 *, *::before, *::after {
@@ -14,11 +19,11 @@
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
     background: var(--bg-primary);
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 html,
