add more styling

--- a/svelte_gql_axum_postgresql/frontend/src/app.css
+++ b/svelte_gql_axum_postgresql/frontend/src/app.css
@@ -31,3 +31,7 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+body, button, input, select, textarea {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
